new update, "total" ada di atas

--- a/index.html
+++ b/index.html
@@ -24,15 +24,30 @@
         .input-group-text {
             background-color: #f8f9fa;
             font-weight: bold;
-            min-width: 100px; /* Lebar label agar sejajar di laptop */
+            min-width: 100px;
         }
 
-        /* Perbaikan tampilan tombol hapus di mobile */
         .btn-clear {
             border-color: #dee2e6;
         }
 
-        /* Padding tambahan agar nyaman di HP */
+        /* Sticky Total Section */
+        .sticky-total {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background-color: #ffffff;
+            border-bottom: 2px solid #f1f1f1;
+            padding: 15px;
+            border-radius: 12px 12px 0 0;
+        }
+
+        .btn-copy {
+            font-size: 0.8rem;
+            padding: 2px 8px;
+            margin-top: 5px;
+        }
+
         @media (max-width: 576px) {
             .container { padding-left: 10px; padding-right: 10px; }
             .input-group-text { min-width: 85px; font-size: 0.9rem; }
@@ -47,17 +62,26 @@
             <h5 class="mb-0">Kalkulator Uang Tunai</h5>
         </div>
 
+        <div class="sticky-total text-center">
+            <small class="text-muted d-block">Total Keseluruhan</small>
+            <h3 class="text-success fw-bold mb-0" id="total">Rp 0</h3>
+            <button class="btn btn-outline-success btn-sm btn-copy" onclick="copyTotal()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy me-1" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"/>
+                </svg> Salin Total
+            </button>
+        </div>
+
         <div class="card-body p-3 p-md-4">
             
             <div id="input-container">
                 <div class="mb-3">
                     <div class="input-group">
                         <span class="input-group-text">Rp 100.000</span>
-                        <button class="btn btn-outline-secondary btn-clear" type="button" title="Hapus baris ini">×</button>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
                         <input type="number" class="form-control uang" data-nilai="100000" inputmode="numeric" placeholder="Jumlah Lembar">
                     </div>
                 </div>
-
                 <div class="mb-3">
                     <div class="input-group">
                         <span class="input-group-text">Rp 50.000</span>
@@ -65,7 +89,6 @@
                         <input type="number" class="form-control uang" data-nilai="50000" inputmode="numeric" placeholder="Jumlah Lembar">
                     </div>
                 </div>
-
                 <div class="mb-3">
                     <div class="input-group">
                         <span class="input-group-text">Rp 20.000</span>
@@ -73,7 +96,6 @@
                         <input type="number" class="form-control uang" data-nilai="20000" inputmode="numeric" placeholder="Jumlah Lembar">
                     </div>
                 </div>
-
                 <div class="mb-3">
                     <div class="input-group">
                         <span class="input-group-text">Rp 10.000</span>
@@ -81,7 +103,6 @@
                         <input type="number" class="form-control uang" data-nilai="10000" inputmode="numeric" placeholder="Jumlah Lembar">
                     </div>
                 </div>
-
                 <div class="mb-3">
                     <div class="input-group">
                         <span class="input-group-text">Rp 5.000</span>
@@ -89,7 +110,6 @@
                         <input type="number" class="form-control uang" data-nilai="5000" inputmode="numeric" placeholder="Jumlah Lembar">
                     </div>
                 </div>
-
                 <div class="mb-3">
                     <div class="input-group">
                         <span class="input-group-text">Rp 2.000</span>
@@ -97,7 +117,6 @@
                         <input type="number" class="form-control uang" data-nilai="2000" inputmode="numeric" placeholder="Jumlah Lembar">
                     </div>
                 </div>
-
                 <div class="mb-3">
                     <div class="input-group">
                         <span class="input-group-text">Rp 1.000</span>
@@ -109,15 +128,11 @@
 
             <hr>
 
-            <div class="row align-items-center g-3">
-                <div class="col-12 col-md-4 order-2 order-md-1">
+            <div class="row">
+                <div class="col-12">
                     <button type="button" class="btn btn-danger w-100" onclick="resetSemua()">
                         Reset Semua
                     </button>
-                </div>
-                <div class="col-12 col-md-8 order-1 order-md-2 text-md-end text-center">
-                    <small class="text-muted d-block">Total Keseluruhan</small>
-                    <h3 class="text-success fw-bold mb-0" id="total">Rp 0</h3>
                 </div>
             </div>
 
@@ -131,18 +146,46 @@
     const inputs = document.querySelectorAll('.uang');
     const totalEl = document.getElementById('total');
     const clearButtons = document.querySelectorAll('.btn-clear');
+    let totalAngka = 0; // Menyimpan nilai angka asli untuk dicopy
 
     function hitungTotal() {
-        let total = 0;
+        totalAngka = 0;
         inputs.forEach(input => {
             const jumlah = parseInt(input.value) || 0;
             const nilai = parseInt(input.dataset.nilai);
-            total += jumlah * nilai;
+            totalAngka += jumlah * nilai;
         });
-        totalEl.innerText = 'Rp ' + total.toLocaleString('id-ID');
+        totalEl.innerText = 'Rp ' + totalAngka.toLocaleString('id-ID');
     }
 
-    // Tombol hapus per baris
+    // Fungsi Salin Total
+    function copyTotal() {
+        if (totalAngka === 0) {
+            Swal.fire({
+                icon: 'info',
+                text: 'Total masih Rp 0',
+                timer: 1000,
+                showConfirmButton: false
+            });
+            return;
+        }
+
+        // Salin nilai angka saja ke clipboard
+        navigator.clipboard.writeText(totalAngka).then(() => {
+            const Toast = Swal.mixin({
+                toast: true,
+                position: 'top-end',
+                showConfirmButton: false,
+                timer: 2000,
+                timerProgressBar: true
+            });
+            Toast.fire({
+                icon: 'success',
+                title: 'Total berhasil disalin: ' + totalAngka
+            });
+        });
+    }
+
     clearButtons.forEach((btn, index) => {
         btn.addEventListener('click', () => {
             inputs[index].value = '';
@@ -150,7 +193,6 @@
         });
     });
 
-    // Reset Semua dengan SweetAlert2
     function resetSemua() {
         Swal.fire({
             title: 'Hapus semua data?',
@@ -165,6 +207,7 @@
         }).then((result) => {
             if (result.isConfirmed) {
                 inputs.forEach(input => input.value = '');
+                totalAngka = 0;
                 totalEl.innerText = 'Rp 0';
                 
                 Swal.fire({
@@ -177,7 +220,6 @@
         });
     }
 
-    // Event listener untuk input
     inputs.forEach(input => {
         input.addEventListener('input', hitungTotal);
     });
