--- a/index.html
+++ b/index.html
@@ -123,6 +123,90 @@
                         <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
                         <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
                     </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
+                    <div class="mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">Rp 1.000</span>
+                        <button class="btn btn-outline-secondary btn-clear" type="button">×</button>
+                        <input type="number" class="form-control uang" data-nilai="1000" inputmode="numeric" placeholder="Jumlah Lembar">
+                    </div>
+                </div>
                 </div>
             </div>
 
@@ -226,4 +310,5 @@
 </script>
 
 </body>
+
 </html>
